--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Media Project</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 
-    <h1>Olá Mundo</h1>
+    <main>
+
+        <section id="mobile">
+
+
+        </section>
+
+
+        <section id="social-medias">
+
+            
+        </section>
+    </main>
     
 </body>
 </html>
