Create home screen

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
         <section id="mobile">
 
+            <iframe src="home.html" name="screen" id="screen"frameborder="0"></iframe>
+
 
         </section>
 
