Added personal Linkedin and Github

--- a/github.html
+++ b/github.html
@@ -12,7 +12,7 @@
 <body>
 
     <img src="imagens/tela-github.jpg" alt="Github">
-    <a href="https://github.com/gustavoguanabara" target="_blank">Access</a>
+    <a href="https://github.com/amandabarata" target="_blank">Access</a>
     
 </body>
 </html>
