--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="social-medias">
 
             <a href="home.html" target="screen"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
-            <a href="youtube.html" target="screen"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="linkedin.html" target="screen"><img src="imagens/icone-linkedin.png" alt="Youtube"></a> <br>
             <a href="github.html" target="screen"><img src="imagens/logo-github.jpg" alt="Github"></a> <br>
             <a href="instagram.html" target="screen"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
             <a href="twitter.html" target="screen"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
