--- a/linkedin.html
+++ b/linkedin.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-    <img src="imagens/tela-youtube.png" alt="YouTube">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/playlists" target="_blank">Access</a>
+    <img src="imagens/tela-linkedin.jpg" alt="YouTube">
+    <a href="https://www.linkedin.com/in/amanda-barata-a9925679/" target="_blank">Access</a>
     
 </body>
 </html>
