Update Linkedin image

--- a/linkedin.html
+++ b/linkedin.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <img src="imagens/tela-linkedin.jpg" alt="YouTube">
+    <img src="imagens/tela-linkedin2.jpg" alt="YouTube">
     <a href="https://www.linkedin.com/in/amanda-barata-a9925679/" target="_blank">Access</a>
     
 </body>
